--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
 	<title>Ciclo</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230606102300">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230606105841">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Explore the captivating world of GSAP animations on our website! Discover a collection of stunning animations created using GSAP (GreenSock Animation Platform). Bring your website to life with smooth transitions, interactive effects, and impressive animations. Unlock the potential of GSAP to transform your site into a unique and engaging user experience. Dive into the possibilities of GSAP on our website today!">
 </head>
 
 <body>
@@ -18,40 +19,40 @@
 			<nav class="pagination">
 				<ul class="pagination__list">
 					<li class="pagination__item">
-						<a href="#screen-01" class="pagination__link"></a>
+						<a href="#screen-01" class="pagination__link" aria-label="Go to section 1"></a>
 					</li>
 					<li class="pagination__item">
-						<a href="#screen-02" class="pagination__link"></a>
+						<a href="#screen-02" class="pagination__link" aria-label="Go to section 2"></a>
 					</li>
 					<li class="pagination__item">
-						<a href="#screen-03" class="pagination__link"></a>
+						<a href="#screen-03" class="pagination__link" aria-label="Go to section 3"></a>
 					</li>
 					<li class="pagination__item">
-						<a href="#screen-04" class="pagination__link"></a>
+						<a href="#screen-04" class="pagination__link" aria-label="Go to section 4"></a>
 					</li>
 					<li class="pagination__item">
-						<a href="#screen-05" class="pagination__link"></a>
+						<a href="#screen-05" class="pagination__link" aria-label="Go to section 5"></a>
 					</li>
 					<li class="pagination__item">
-						<a href="#screen-06" class="pagination__link"></a>
+						<a href="#screen-06" class="pagination__link" aria-label="Go to section 6"></a>
 					</li>
 					<li class="pagination__item">
-						<a href="#screen-07" class="pagination__link"></a>
+						<a href="#screen-07" class="pagination__link" aria-label="Go to section 7"></a>
 					</li>
 					<li class="pagination__item">
-						<a href="#screen-08" class="pagination__link"></a>
+						<a href="#screen-08" class="pagination__link" aria-label="Go to section 8"></a>
 					</li>
 					<li class="pagination__item">
-						<a href="#screen-09" class="pagination__link"></a>
+						<a href="#screen-09" class="pagination__link" aria-label="Go to section 9"></a>
 					</li>
 					<li class="pagination__item">
-						<a href="#screen-10" class="pagination__link"></a>
+						<a href="#screen-10" class="pagination__link" aria-label="Go to section 10"></a>
 					</li>
 					<li class="pagination__item">
-						<a href="#screen-11" class="pagination__link"></a>
+						<a href="#screen-11" class="pagination__link" aria-label="Go to section 11"></a>
 					</li>
 					<li class="pagination__item">
-						<a href="#screen-12" class="pagination__link"></a>
+						<a href="#screen-12" class="pagination__link" aria-label="Go to section 12"></a>
 					</li>
 				</ul>
 			</nav>
@@ -62,7 +63,7 @@
 							<div class="section-header__label">Multipurpose Minimal Solution</div>
 							<h1 class="section-header__title">The simplest things are often the truest…</h1>
 						</div>
-						<picture><source srcset="img/screen-01/image.webp" type="image/webp"><img animated-image class="screen-01__image" src="img/screen-01/image.jpg" alt="Image"></picture>
+						<picture><source srcset="img/screen-01/image.webp" type="image/webp"><img class="animated-image" class="screen-01__image" src="img/screen-01/image.jpg" alt="Image" width="1440" height="600"></picture>
 					</div>
 				</div>
 			</section>
@@ -83,7 +84,7 @@
 						</div>
 					</div>
 					<div class="screen-02__image">
-						<picture><source srcset="img/screen-02/image.webp" type="image/webp"><img animated-image src="img/screen-02/image.jpg" alt="Image"></picture>
+						<picture><source srcset="img/screen-02/image.webp" type="image/webp"><img class="animated-image" src="img/screen-02/image.jpg" alt="Image" width="720" height="840"></picture>
 					</div>
 				</div>
 			</section>
@@ -99,20 +100,20 @@
 								<div class="value-screen-03__label">Design</div>
 								<div class="value-screen-03__value">95%</div>
 								<div class="value-screen-03__line">
-									<span animated-line style="width: 95%;"></span>
+									<span class="animated-line" style="width: 95%;"></span>
 								</div>
 							</div>
 							<div class="value-screen-03__item">
 								<div class="value-screen-03__label">Projects</div>
 								<div class="value-screen-03__value">60%</div>
 								<div class="value-screen-03__line">
-									<span animated-line style="width: 60%;"></span>
+									<span class="animated-line" style="width: 60%;"></span>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="screen-03__image">
-						<picture><source srcset="img/screen-03/image.webp" type="image/webp"><img animated-image src="img/screen-03/image.jpg" alt="Image"></picture>
+						<picture><source srcset="img/screen-03/image.webp" type="image/webp"><img class="animated-image" src="img/screen-03/image.jpg" alt="Image" width="720" height="1080"></picture>
 					</div>
 				</div>
 			</section>
@@ -128,7 +129,7 @@
 					<div class="screen-04__advantages advantages">
 						<article class="advantages__item">
 							<div class="advantages__icon">
-								<picture><source srcset="img/screen-04/01.webp" type="image/webp"><img src="img/screen-04/01.jpg" alt="Icon"></picture>
+								<picture><source srcset="img/screen-04/01.webp" type="image/webp"><img src="img/screen-04/01.jpg" alt="Icon" width="48" height="48"></picture>
 							</div>
 							<h3 class="advantages__title title">Cloud System</h3>
 							<div class="advantages__text text">
@@ -140,7 +141,7 @@
 						</article>
 						<article class="advantages__item">
 							<div class="advantages__icon">
-								<picture><source srcset="img/screen-04/02.webp" type="image/webp"><img src="img/screen-04/02.jpg" alt="Icon"></picture>
+								<picture><source srcset="img/screen-04/02.webp" type="image/webp"><img src="img/screen-04/02.jpg" alt="Icon" width="48" height="48"></picture>
 							</div>
 							<h3 class="advantages__title title">Security</h3>
 							<div class="advantages__text text">
@@ -152,7 +153,7 @@
 						</article>
 						<article class="advantages__item">
 							<div class="advantages__icon">
-								<picture><source srcset="img/screen-04/03.webp" type="image/webp"><img src="img/screen-04/03.jpg" alt="Icon"></picture>
+								<picture><source srcset="img/screen-04/03.webp" type="image/webp"><img src="img/screen-04/03.jpg" alt="Icon" width="48" height="48"></picture>
 							</div>
 							<h3 class="advantages__title title">Easy to Customize</h3>
 							<div class="advantages__text text">
@@ -183,10 +184,10 @@
 					</div>
 					<div class="screen-05__images">
 						<div class="screen-05__image-ibg">
-							<picture><source srcset="img/screen-05/01.webp" type="image/webp"><img animated-image src="img/screen-05/01.jpg" alt="Image"></picture>
+							<picture><source srcset="img/screen-05/01.webp" type="image/webp"><img class="animated-image" src="img/screen-05/01.jpg" alt="Image" width="720" height="540"></picture>
 						</div>
 						<div class="screen-05__image-ibg">
-							<picture><source srcset="img/screen-05/02.webp" type="image/webp"><img animated-image src="img/screen-05/02.jpg" alt="Image"></picture>
+							<picture><source srcset="img/screen-05/02.webp" type="image/webp"><img class="animated-image" src="img/screen-05/02.jpg" alt="Image" width="720" height="540"></picture>
 						</div>
 					</div>
 				</div>
@@ -202,7 +203,7 @@
 					<div class="screen-06__services services">
 						<article class="services__item">
 							<div class="services__icon">
-								<picture><source srcset="img/screen-06/link.webp" type="image/webp"><img src="img/screen-06/link.jpg" alt="Icon"></picture>
+								<picture><source srcset="img/screen-06/link.webp" type="image/webp"><img src="img/screen-06/link.jpg" alt="Icon" width="60" height="60"></picture>
 							</div>
 							<div class="services__body">
 								<h3 class="services__title title">Connection</h3>
@@ -216,7 +217,7 @@
 						</article>
 						<article class="services__item">
 							<div class="services__icon">
-								<picture><source srcset="img/screen-06/idea.webp" type="image/webp"><img src="img/screen-06/idea.jpg" alt="Icon"></picture>
+								<picture><source srcset="img/screen-06/idea.webp" type="image/webp"><img src="img/screen-06/idea.jpg" alt="Icon" width="60" height="60"></picture>
 							</div>
 							<div class="services__body">
 								<h3 class="services__title title">Creativity</h3>
@@ -230,7 +231,7 @@
 						</article>
 						<article class="services__item">
 							<div class="services__icon">
-								<picture><source srcset="img/screen-06/telegram.webp" type="image/webp"><img src="img/screen-06/telegram.jpg" alt="Icon"></picture>
+								<picture><source srcset="img/screen-06/telegram.webp" type="image/webp"><img src="img/screen-06/telegram.jpg" alt="Icon" width="60" height="60"></picture>
 							</div>
 							<div class="services__body">
 								<h3 class="services__title title">Support Center</h3>
@@ -245,12 +246,12 @@
 					</div>
 				</div>
 			</section>
-			<section data-section-name="screen-07" class="page__section screen-07 scroll">
+			<div data-section-name="screen-07" class="page__section screen-07 scroll">
 				<div class="screen-07__container">
 					<div class="screen-07__services services">
 						<article class="services__item">
 							<div class="services__icon">
-								<picture><source srcset="img/screen-06/link.webp" type="image/webp"><img src="img/screen-06/link.jpg" alt="Icon"></picture>
+								<picture><source srcset="img/screen-06/link.webp" type="image/webp"><img src="img/screen-06/link.jpg" alt="Icon" width="60" height="60"></picture>
 							</div>
 							<div class="services__body">
 								<h3 class="services__title title">Connection</h3>
@@ -264,7 +265,7 @@
 						</article>
 						<article class="services__item">
 							<div class="services__icon">
-								<picture><source srcset="img/screen-06/idea.webp" type="image/webp"><img src="img/screen-06/idea.jpg" alt="Icon"></picture>
+								<picture><source srcset="img/screen-06/idea.webp" type="image/webp"><img src="img/screen-06/idea.jpg" alt="Icon" width="60" height="60"></picture>
 							</div>
 							<div class="services__body">
 								<h3 class="services__title title">Creativity</h3>
@@ -278,7 +279,7 @@
 						</article>
 						<article class="services__item">
 							<div class="services__icon">
-								<picture><source srcset="img/screen-06/telegram.webp" type="image/webp"><img src="img/screen-06/telegram.jpg" alt="Icon"></picture>
+								<picture><source srcset="img/screen-06/telegram.webp" type="image/webp"><img src="img/screen-06/telegram.jpg" alt="Icon" width="60" height="60"></picture>
 							</div>
 							<div class="services__body">
 								<h3 class="services__title title">Support Center</h3>
@@ -292,10 +293,10 @@
 						</article>
 					</div>
 					<div class="screen-07__image">
-						<picture><source srcset="img/screen-07/image.webp" type="image/webp"><img animated-image src="img/screen-07/image.jpg" alt="Image"></picture>
+						<picture><source srcset="img/screen-07/image.webp" type="image/webp"><img class="animated-image" src="img/screen-07/image.jpg" alt="Image" width="720" height="1080"></picture>
 					</div>
 				</div>
-			</section>
+			</div>
 			<section data-section-name="screen-08" class="page__section screen-08 scroll">
 				<div class="screen-08__container">
 					<div class="screen-08__content">
@@ -315,7 +316,7 @@
 						</div>
 					</div>
 					<div class="screen-08__image">
-						<picture><source srcset="img/screen-08/image.webp" type="image/webp"><img animated-image src="img/screen-08/image.jpg" alt="Image"></picture>
+						<picture><source srcset="img/screen-08/image.webp" type="image/webp"><img class="animated-image" src="img/screen-08/image.jpg" alt="Image" width="720" height="1080"></picture>
 					</div>
 				</div>
 			</section>
@@ -339,7 +340,7 @@
 								</div>
 							</div>
 							<div class="item-screen-09__image-ibg">
-								<picture><source srcset="img/screen-09/image-01.webp" type="image/webp"><img animated-image src="img/screen-09/image-01.jpg" alt="Image"></picture>
+								<picture><source srcset="img/screen-09/image-01.webp" type="image/webp"><img class="animated-image" src="img/screen-09/image-01.jpg" alt="Image" width="480" height="540"></picture>
 							</div>
 						</article>
 						<article class="screen-09__item item-screen-09">
@@ -353,13 +354,13 @@
 								</div>
 							</div>
 							<div class="item-screen-09__image-ibg">
-								<picture><source srcset="img/screen-09/image-02.webp" type="image/webp"><img animated-image src="img/screen-09/image-02.jpg" alt="Image"></picture>
+								<picture><source srcset="img/screen-09/image-02.webp" type="image/webp"><img class="animated-image" src="img/screen-09/image-02.jpg" alt="Image" width="480" height="540"></picture>
 							</div>
 						</article>
 					</div>
 				</div>
 			</section>
-			<section data-section-name="screen-10" class="page__section screen-10 scroll">
+			<div data-section-name="screen-10" class="page__section screen-10 scroll">
 				<div class="screen-10__container">
 					<article class="screen-10__item">
 						<div class="screen-10__body">
@@ -372,7 +373,7 @@
 							</div>
 						</div>
 						<div class="screen-10__image-ibg">
-							<picture><source srcset="img/screen-10/01.webp" type="image/webp"><img animated-image src="img/screen-10/01.jpg" alt="Image"></picture>
+							<picture><source srcset="img/screen-10/01.webp" type="image/webp"><img class="animated-image" src="img/screen-10/01.jpg" alt="Image" width="482" height="620"></picture>
 						</div>
 					</article>
 					<article class="screen-10__item">
@@ -386,7 +387,7 @@
 							</div>
 						</div>
 						<div class="screen-10__image-ibg">
-							<picture><source srcset="img/screen-10/02.webp" type="image/webp"><img animated-image src="img/screen-10/02.jpg" alt="Image"></picture>
+							<picture><source srcset="img/screen-10/02.webp" type="image/webp"><img class="animated-image" src="img/screen-10/02.jpg" alt="Image" width="482" height="620"></picture>
 						</div>
 					</article>
 					<article class="screen-10__item">
@@ -400,11 +401,11 @@
 							</div>
 						</div>
 						<div class="screen-10__image-ibg">
-							<picture><source srcset="img/screen-10/03.webp" type="image/webp"><img animated-image src="img/screen-10/03.jpg" alt="Image"></picture>
+							<picture><source srcset="img/screen-10/03.webp" type="image/webp"><img class="animated-image" src="img/screen-10/03.jpg" alt="Image" width="482" height="620"></picture>
 						</div>
 					</article>
 				</div>
-			</section>
+			</div>
 			<section data-section-name="screen-11" class="page__section screen-11 scroll">
 				<div class="screen-11__container">
 					<div class="screen-11__items">
@@ -437,11 +438,11 @@
 						</article>
 					</div>
 					<div class="screen-11__image">
-						<picture><source srcset="img/screen-11/image.webp" type="image/webp"><img animated-image src="img/screen-11/image.jpg" alt="Image"></picture>
+						<picture><source srcset="img/screen-11/image.webp" type="image/webp"><img class="animated-image" src="img/screen-11/image.jpg" alt="Image" width="720" height="600"></picture>
 					</div>
 				</div>
 			</section>
-			<section data-section-name="screen-12" class="page__section screen-12 scroll">
+			<div data-section-name="screen-12" class="page__section screen-12 scroll">
 				<div class="screen-12__container">
 					<div class="screen-12__body">
 						<div class="screen-12__items">
@@ -458,10 +459,10 @@
 								<div class="screen-12__label">Business Projects</div>
 							</div>
 						</div>
-						<picture><source srcset="img/screen-12/image.webp" type="image/webp"><img animated-image class="screen-12__image" src="img/screen-12/image.jpg" alt="Image"></picture>
+						<picture><source srcset="img/screen-12/image.webp" type="image/webp"><img class="animated-image" class="screen-12__image" src="img/screen-12/image.jpg" alt="Image" width="1440" height="600"></picture>
 					</div>
 				</div>
-			</section>
+			</div>
 		</main>
 	</div>
 	<!-- <div id="popup" aria-hidden="true" class="popup">
@@ -474,10 +475,10 @@
 		</div>
 	</div>
 </div> -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js?_v=20230606102300"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js?_v=20230606102300"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js?_v=20230606102300"></script>
-	<script src="js/app.min.js?_v=20230606102300"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js?_v=20230606105841"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js?_v=20230606105841"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js?_v=20230606105841"></script>
+	<script src="js/app.min.js?_v=20230606105841"></script>
 
 </body>
 
