--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<div class="section-header__label">Multipurpose Minimal Solution</div>
 							<h1 class="section-header__title">The simplest things are often the truest…</h1>
 						</div>
-						<picture><source srcset="img/screen-01/image.webp" type="image/webp"><img class="screen-01__image animated-image" src="img/screen-01/image.jpg" alt="Image"></picture>
+						<picture><source srcset="img/screen-01/image.webp" type="image/webp"><img class="screen-01__image animated-image" src="img/screen-01/image.jpg" alt="Image" width="1440" height="600"></picture>
 					</div>
 				</div>
 			</section>
@@ -459,7 +459,7 @@
 								<div class="screen-12__label">Business Projects</div>
 							</div>
 						</div>
-						<picture><source srcset="img/screen-12/image.webp" type="image/webp"><img class="screen-12__image animated-image" src="img/screen-12/image.jpg" alt="Image"></picture>
+						<picture><source srcset="img/screen-12/image.webp" type="image/webp"><img class="screen-12__image animated-image" src="img/screen-12/image.jpg" alt="Image" width="1440" height="600"></picture>
 					</div>
 				</div>
 			</div>
