--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230606110632">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230606115030">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -63,7 +63,7 @@
 							<div class="section-header__label">Multipurpose Minimal Solution</div>
 							<h1 class="section-header__title">The simplest things are often the truest…</h1>
 						</div>
-						<picture><source srcset="img/screen-01/image.webp" type="image/webp"><img class="animated-image" class="screen-01__image" src="img/screen-01/image.jpg" alt="Image"></picture>
+						<picture><source srcset="img/screen-01/image.webp" type="image/webp"><img class="screen-01__image animated-image" src="img/screen-01/image.jpg" alt="Image" width="1440" height="600"></picture>
 					</div>
 				</div>
 			</section>
@@ -459,7 +459,7 @@
 								<div class="screen-12__label">Business Projects</div>
 							</div>
 						</div>
-						<picture><source srcset="img/screen-12/image.webp" type="image/webp"><img class="animated-image" class="screen-12__image" src="img/screen-12/image.jpg" alt="Image"></picture>
+						<picture><source srcset="img/screen-12/image.webp" type="image/webp"><img class="screen-12__image animated-image" src="img/screen-12/image.jpg" alt="Image" width="1440" height="600"></picture>
 					</div>
 				</div>
 			</div>
@@ -475,10 +475,10 @@
 		</div>
 	</div>
 </div> -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js?_v=20230606110632"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js?_v=20230606110632"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js?_v=20230606110632"></script>
-	<script src="js/app.min.js?_v=20230606110632"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js?_v=20230606115030"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js?_v=20230606115030"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js?_v=20230606115030"></script>
+	<script src="js/app.min.js?_v=20230606115030"></script>
 
 </body>
 
