--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 					</article>
 				</div>
 			</div>
-			<section data-section-name="screen-11" class="page__section screen-11 scroll">
+			<div data-section-name="screen-11" class="page__section screen-11 scroll">
 				<div class="screen-11__container">
 					<div class="screen-11__items">
 						<article class="screen-11__item">
@@ -441,7 +441,7 @@
 						<picture><source srcset="img/screen-11/image.webp" type="image/webp"><img class="animated-image" src="img/screen-11/image.jpg" alt="Image" width="720" height="600"></picture>
 					</div>
 				</div>
-			</section>
+			</div>
 			<div data-section-name="screen-12" class="page__section screen-12 scroll">
 				<div class="screen-12__container">
 					<div class="screen-12__body">
